# CXX20Modules

./: CMakeLists.txt  LICENSE  README.md  foo.ixx  main.cpp  math.ixx
.github/workflows/: clang.yml  gcc.yml  msvc.yml  msvc2019.yml
cmake/: CXX20Modules.cmake
lib/: CMakeLists.txt
lib/include/: lib.h
lib/src/: bar.cpp  baz.cpp  foo.cpp
tests/: CMakeLists.txt  main.cpp
